--- a/Tareas/Tarea1/Notebooks/Tarea1_parte_2.ipynb
+++ b/Tareas/Tarea1/Notebooks/Tarea1_parte_2.ipynb
@@ -2,157 +2,99 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "using Combinatorics;\n",
-    "N = 2;\n",
-    "V = zeros(N+1,8);\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "7-element Array{Int64,1}:\n",
-       " 1\n",
-       " 2\n",
-       " 3\n",
-       " 4\n",
-       " 5\n",
-       " 6\n",
-       " 7"
+       "4×7×7 Array{Float64,3}:\n",
+       "[:, :, 1] =\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "\n",
+       "[:, :, 2] =\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "\n",
+       "[:, :, 3] =\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "\n",
+       "[:, :, 4] =\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "\n",
+       "[:, :, 5] =\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "\n",
+       "[:, :, 6] =\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       "\n",
+       "[:, :, 7] =\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0\n",
+       " 0.0  0.0  0.0  0.0  0.0  0.0  0.0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "filas"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "5040-element Array{Array{Int64,1},1}:\n",
-       " [1, 2, 3, 4, 5, 6, 7]\n",
-       " [1, 2, 3, 4, 5, 7, 6]\n",
-       " [1, 2, 3, 4, 6, 5, 7]\n",
-       " [1, 2, 3, 4, 6, 7, 5]\n",
-       " [1, 2, 3, 4, 7, 5, 6]\n",
-       " [1, 2, 3, 4, 7, 6, 5]\n",
-       " [1, 2, 3, 5, 4, 6, 7]\n",
-       " [1, 2, 3, 5, 4, 7, 6]\n",
-       " [1, 2, 3, 5, 6, 4, 7]\n",
-       " [1, 2, 3, 5, 6, 7, 4]\n",
-       " [1, 2, 3, 5, 7, 4, 6]\n",
-       " [1, 2, 3, 5, 7, 6, 4]\n",
-       " [1, 2, 3, 6, 4, 5, 7]\n",
-       " ⋮                    \n",
-       " [7, 6, 5, 3, 1, 2, 4]\n",
-       " [7, 6, 5, 3, 1, 4, 2]\n",
-       " [7, 6, 5, 3, 2, 1, 4]\n",
-       " [7, 6, 5, 3, 2, 4, 1]\n",
-       " [7, 6, 5, 3, 4, 1, 2]\n",
-       " [7, 6, 5, 3, 4, 2, 1]\n",
-       " [7, 6, 5, 4, 1, 2, 3]\n",
-       " [7, 6, 5, 4, 1, 3, 2]\n",
-       " [7, 6, 5, 4, 2, 1, 3]\n",
-       " [7, 6, 5, 4, 2, 3, 1]\n",
-       " [7, 6, 5, 4, 3, 1, 2]\n",
-       " [7, 6, 5, 4, 3, 2, 1]"
-      ]
-     },
-     "execution_count": 49,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "filas = [1,2,3,4,5,6,7];\n",
-    "sigma = permutations(filas) |> collect"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "combination_producer"
-      ]
-     },
-     "execution_count": 44,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "\"\"\"\n",
-    "Produces all `k`-combinations of integers in `1:l` with prefix `current`, in a\n",
-    "lexicographical order.\n",
+    "N = 1;# cantidad de alumnos a entrevistar\n",
+    "V = zeros(N+1,7,N,N,N,N,N,N,N); # almacenar el el valor maximo de la calidad dada una etapa n y calidad i\n",
+    "for etapa = N:-1:1\n",
+    "    for I_N = 1:7\n",
+    "        for S_1=N:-1:0\n",
+    "            for S_2=N:-1:0\n",
+    "                for S_3=N:-1:0\n",
+    "                    for S_4=N:-1:0\n",
+    "                        for S_5=N:-1:0\n",
+    "                            for S_6=N:-1:0\n",
+    "                                for S_7=N:-1:0\n",
+    "                                    if S_1+S_2+S_3+S_4+S_5+S_6+S_7 = N\n",
+    "                                        \n",
+    "                                        # calcular valor esperado de la opcion futura\n",
+    "                                        E = ;\n",
+    "                                        if I_N <= E\n",
+    "                                            V[etapa,I_N] = E;\n",
+    "                                            X[etapa,I_N] = 0;\n",
+    "                                        else\n",
+    "                                            V[etapa,I_N] = I_N;\n",
+    "                                            X[:,I_N] = zeros(N,1); # dejar un 1 solo donde se escogió al estudiante por primera vez\n",
+    "                                            X[etapa,I_N] = 1;\n",
     "\n",
-    "# Arguments\n",
-    "- `current`: The current combination\n",
-    "- `l`: The parent set size\n",
-    "- `k`: The target combination size\n",
-    "\"\"\"\n",
-    "function combination_producer(l, k, current)\n",
-    "    if k == length(current)\n",
-    "        produce(current)\n",
-    "    else\n",
-    "        j = (length(current) > 0) ? (last(current)+1) : 1\n",
-    "        for i=j:l\n",
-    "            combination_producer(l, k, [current, i])\n",
+    "                                        end\n",
+    "                                    end\n",
+    "                                end\n",
+    "                            end\n",
+    "                        end\n",
+    "                    end\n",
+    "                end\n",
+    "            end\n",
     "        end\n",
+    "        \n",
     "    end\n",
     "end\n",
-    "\n",
-    "\"\"\"\n",
-    "Produces all combinations of size `k` from `1:l` in a lexicographical order\n",
-    "\"\"\"\n",
-    "function combination_producer(l,k)\n",
-    "    combination_producer(l,k, [])\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "LoadError",
-     "evalue": "\u001b[91mMethodError: no method matching start(::Void)\u001b[0m\nClosest candidates are:\n  start(\u001b[91m::SimpleVector\u001b[39m) at essentials.jl:258\n  start(\u001b[91m::Base.MethodList\u001b[39m) at reflection.jl:560\n  start(\u001b[91m::ExponentialBackOff\u001b[39m) at error.jl:107\n  ...\u001b[39m",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[91mMethodError: no method matching start(::Void)\u001b[0m\nClosest candidates are:\n  start(\u001b[91m::SimpleVector\u001b[39m) at essentials.jl:258\n  start(\u001b[91m::Base.MethodList\u001b[39m) at reflection.jl:560\n  start(\u001b[91m::ExponentialBackOff\u001b[39m) at error.jl:107\n  ...\u001b[39m",
-      "",
-      "Stacktrace:",
-      " [1] \u001b[1manonymous\u001b[22m\u001b[22m at \u001b[1m./<missing>:?\u001b[22m\u001b[22m"
-     ]
-    }
-   ],
-   "source": [
-    "for c in combination_producer(7, 7)\n",
-    "    c\n",
-    "end"
+    "# imprimir el valor maximo esperado\n",
+    "print((1/7)*sum(V[1,:]))"
    ]
   }
  ],
